--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+<META charset="UTF-8">
+<META name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Coming Soon</title>
+</head>
+<body>
+  <h1> coming soon yall </h1>
+</body>
+</html>
