just messing around

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
 <META charset="UTF-8">
 <META name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Coming Soon</title>
+<title>404fm</title>
+<style>
+  body {
+    background-image: url('color.png');
+    background-attachment: fixed;
+    background-position: center;
+  }
+  </style>
 </head>
 <body>
-  <h1> coming soon yall </h1>
+  <center><h1 style="font-family:Helvetica;">coming soon</h1></center>
 </body>
 </html>
