--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="col-lg-6">
           <h1 class="mt-5">Coming soon... I hope...</h1>
           <a class="alt-link" href="mailto:li431@nyu.edu" target="_blank"><img src="img/mail.png" style="height: 1.3rem;" class="blue-filter" alt="lujain.ibrahim@nyu.edu"></a>&ensp; lujain.ibrahim@nyu.edu <br>
-          <a class="alt-link" href="https://www.twitter.com/lujainmibrahim" target="_blank"> <img src="img/twitter.png" style="height: 1.1rem;" class="blue-filter" alt="twitter.com/lujainmibrahim"></a>&ensp; lujainmibrahim <br>
-          <a class="alt-link" href="https://www.github.com/lujainibrahim" target="_blank"><img src="img/github.png" style="height: 1.3rem" class="blue-filter" alt="github.com/lujainibrahim"></a> &ensp;lujainibrahim</p>
+<!--           <a class="alt-link" href="https://www.twitter.com/lujainmibrahim" target="_blank"> <img src="img/twitter.png" style="height: 1.1rem;" class="blue-filter" alt="twitter.com/lujainmibrahim"></a>&ensp; lujainmibrahim <br>
+          <a class="alt-link" href="https://www.github.com/lujainibrahim" target="_blank"><img src="img/github.png" style="height: 1.3rem" class="blue-filter" alt="github.com/lujainibrahim"></a> &ensp;lujainibrahim</p> -->
         </div>
       </div>
     </div>
