some changes finally:

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Lujain Ibrahim">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
 
   <title>Lujain Ibrahim</title>
 
@@ -19,18 +25,30 @@
 </head>
 
 <body>
+  <!-- Page Content -->
   <section>
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
-          <h1 class="mt-5">Coming soon... I hope...</h1>
-          <a class="alt-link" href="mailto:li431@nyu.edu" target="_blank"><img src="img/mail.png" style="height: 1.3rem;" class="blue-filter" alt="lujain.ibrahim@nyu.edu"></a>&ensp; lujain.ibrahim@nyu.edu <br>
-          <a class="alt-link" href="https://www.twitter.com/lujainmibrahim" target="_blank"> <img src="img/twitter.png" style="height: 1.1rem;" class="blue-filter" alt="twitter.com/lujainmibrahim"></a>&ensp; lujainmibrahim <br>
-          <a class="alt-link" href="https://www.github.com/lujainibrahim" target="_blank"><img src="img/github.png" style="height: 1.3rem" class="blue-filter" alt="github.com/lujainibrahim"></a> &ensp;lujainibrahim</p>
+        <div class="col-lg-9">
+          <h1 class="mt-5">Lujain</h1>
+          <p> Marhaba & hello!</p>
+          <p>I'm a research assistant conducting research at the Laboratory for Computer-Human Intelligence at <a href="nyuad.nyu.edu" target="_blank">NYU Abu Dhabi</a> led by <a href="https://talhanai.xyz/" target="_blank">Prof. Tuka Alhanai.</a></p> 
+
+          <p>I recently <a href="https://nyuad.nyu.edu/en/news/latest-news/community-life/2020/may/seventh-commencement-ceremony-2020.html" target="_blank">graduated</a> in May 2020 from NYU Abu Dhabi where I represented my class as student commencement speaker. At NYU Abu Dhabi, I studied computer engineering and completed my (now <a href="https://ieeexplore.ieee.org/document/9268965" target="_blank">published</a>!) senior <a href="https://github.com/lujainibrahim/ecg-view-II-machine-learning" target="_blank">thesis</a> on explainable machine learning for the early detection of heart attacks. My research interests are primarly in developing and using explainable & trustworthy AI for social good.</p> 
+
+          <p>I'm also interested in STEM education and learning about and interrogating the societal implications of AI and the Internet. I'm currently helping design and produce this year's Mozilla Festival (<a href="http://www.mozillafestival.org/" target="_blank">MozFest</a>) on trustworthy AI. Last summer, I co-founded and built <a href="https://www.multiplicity.tech" target="_blank">Multiplicity</a>, a digital curation examining the global impact of the Internet on young people's lives, with my classmate and friend <a href="https://aliaelkattan.github.io/index.html" target="_blank">Alia Elkattan</a>. 
+
+          <p>Finally, I'm a film enthusiast! I've written about all sorts of films academically and extracurricularly. Most recently, I co-curated a film <a href="https://www.labocine.com/issues/unequal-states" target="_blank">issue</a> on "Unequal States" with over 30 films documenting global inequality for the science-film platform <a href="https://www.labocine.com/" target="_blank">Labocine</a>.</p>
+
+          <p><b>I promise I'm more interesting in real life than this website and its plain design. So, if you wanna give me a second shot at impressing you, you can reach me in a few ways: </b></p>
+          <a class="alt-link" href="mailto:li431@nyu.edu" target="_blank"><img src="img/mail.png" style="height: 1.3rem;" class="burgundy-filter" alt="lujain.ibrahim@nyu.edu"></a>&ensp; lujain.ibrahim@nyu.edu <br>
+          <a class="alt-link" href="https://www.twitter.com/lujainmibrahim" target="_blank"> <img src="img/twitter.png" style="height: 1.1rem;" class="burgundy-filter" alt="twitter.com/lujainmibrahim"></a>&ensp; lujainmibrahim <br>
+          <a class="alt-link" href="https://www.github.com/lujainibrahim" target="_blank"><img src="img/github.png" style="height: 1.3rem" class="burgundy-filter" alt="github.com/lujainibrahim"></a> &ensp;lujainibrahim</p>
         </div>
       </div>
     </div>
   </section>
+
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
