--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <p>Finally, I'm a film enthusiast! I've written about all sorts of films academically and extracurricularly. Most recently, I co-curated a film <a href="https://www.labocine.com/issues/unequal-states" target="_blank">issue</a> on "Unequal States" with over 30 films documenting global inequality for the science-film platform <a href="https://www.labocine.com/" target="_blank">Labocine</a>.</p>
 
-          <p><b>I promise I'm more interesting than this website and its plain design in real life. So, if you wanna give me a second shot at impressing you, you can reach me in a several ways: </b></p>
+          <p><b>I promise I'm more interesting than this website and its plain design in real life. So, if you wanna give me a second shot at impressing you, you can reach me in several ways: </b></p>
           <a class="alt-link" href="mailto:li431@nyu.edu" target="_blank"><img src="img/mail.png" style="height: 1.3rem;" class="burgundy-filter" alt="lujain.ibrahim@nyu.edu"></a>&ensp; lujain.ibrahim@nyu.edu <br>
           <a class="alt-link" href="https://www.twitter.com/lujainmibrahim" target="_blank"> <img src="img/twitter.png" style="height: 1.1rem;" class="burgundy-filter" alt="twitter.com/lujainmibrahim"></a>&ensp; lujainmibrahim <br>
           <a class="alt-link" href="https://www.github.com/lujainibrahim" target="_blank"><img src="img/github.png" style="height: 1.3rem" class="burgundy-filter" alt="github.com/lujainibrahim"></a> &ensp;lujainibrahim</p>
