--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <!-- <a class="navbar-brand" href="#">Lujain</a> -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <a class="navbar-brand" href="index.html">Lujain</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,27 +55,30 @@
     </div>
   </nav>
 
+
   <!-- Page Content -->
   <section>
     <div class="container">
       <div class="row">
         <div class="col-lg-9">
-          <h1 class="mt-5">Lujain Ibrahim</h1>
+          <h1 class="mt-5">About me</h1>
           <!-- <p>coming soon... i hope...</p> -->
-          <p>Hi! I'm Lujain, a PhD student in Social Data Science at the <a href="https://www.oii.ox.ac.uk/people/profiles/lujain-ibrahim/" target="_blank">Oxford Internet Institute</a> where I study and research the impact of emerging technologies on society and international politics, with a focus on U.S.-China relations. My doctoral research is mainly concerned with AI governance issues, particularly studying and governing complex human-algorithm feedback loops. Beyond research, I'm invested in making technology and society issues more accessible to the public by building <a href="https://www.multiplicity.tech/" target="_blank">interactive</a> educational websites.</p>
+          <p>I'm currently living between Abu Dhabi and Oxford, where I'm completing my PhD in Social Data Science at the Oxford Internet Institute. You can find my research interests and publications <a href="research.html" target="_blank">here</a>.</p>
 
-          <p>I have studied and worked in the Middle East, the US, the UK, and China, was formerly a fellow at <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a> — a Harvard Berkman-Klein incubated think tank, a <a href="https://www.schwarzmanscholars.org/" target="_blank">Schwarzman Scholar</a> at Tsinghua University, and a researcher at the <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/laboratory-for-computer-human-intelligence.html" target="_blank">Laboratory for Computer-Human Intelligence</a> at NYU Abu Dhabi.</p>
+          <p>My background is in engineering and international relations. I completed my Master's degree in Global Affairs from Tsinghua University in Beijing as a <a href="https://nyuad.nyu.edu/en/news/latest-news/honors-and-awards/2020/december/schwarzman-2022-eng.html" target="_blank">Schwarzman Scholar</a>. My thesis investigated the political implications of the informatization and digitization of the Chinese judiciary and the legal technology innovation system that enables it. My undergraduate degree is in computer engineering from New York University Abu Dhabi. My undergraduate thesis was on <a href="https://ieeexplore.ieee.org/abstract/document/9268965" target="_blank">explainable ML for heart attack prediction</a>.</p>
 
-          <!-- <p><b>What's currently keeping busy?</b> My PhD, building <a href="https://foundation.mozilla.org/en/blog/announcing-11-projects-exploring-ai-and-responsible-design/" target="_blank">"The Algorithm"</a> for the Mozilla Foundation, and teaching a course on the Geopolitics of AI Governance.</p> -->
-          <p>You can learn more about me, my research, and other work here or get in touch:</p>
-          <a class="alt-link" href="mailto:lujainmibrahim@gmail.com" target="_blank"><img src="img/mail.png"
+          <p>Over the years, I've been a fellow at <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a> and <a href="https://montrealethics.ai/">The Montreal AI Ethics Institute</a> and a <a href="https://foundation.mozilla.org/en/blog/announcing-11-projects-exploring-ai-and-responsible-design/" target="_blank">creative media awardee</a> at the Mozilla Foundation. I've also been <a href="https://foundation.mozilla.org/en/blog/one-students-passion-for-the-internet-a-mozfest-story/" target="_blank">active</a> in co-planning the annual Mozilla Festival. My public-facing work was most recently highlighted by The Webby Awards and Omidyar Network in their latest <a href="https://www.webbyawards.com/news/webby-omidyar-responsible-tech-trend-report/" target="_blank">Responsible Tech Industry Report</a>.</p>
+
+          <!-- <p><b>What's currently keeping busy?</b> My doctorate, building <a href="https://foundation.mozilla.org/en/blog/announcing-11-projects-exploring-ai-and-responsible-design/" target="_blank">"The Algorithm"</a> for the Mozilla Foundation, and teaching a course on the Geopolitics of AI Governance.</p> -->
+          <!-- <p>You can learn more about me, my research, and other work here or get in touch:</p> -->
+          <!-- <a class="alt-link" href="mailto:lujainmibrahim@gmail.com" target="_blank"><img src="img/mail.png"
               style="height: 1.3rem;" class="burgundy-filter" alt="lujainmibrahim@gmail.com"></a>&ensp;
           lujainmibrahim@gmail.com<br>
           <a class="alt-link" href="https://www.twitter.com/lujainmibrahim" target="_blank"> <img src="img/twitter.png"
               style="height: 1.1rem;" class="burgundy-filter" alt="twitter.com/lujainmibrahim"></a>&ensp;
           lujainmibrahim <br>
           <a class="alt-link" href="https://www.github.com/lujainibrahim" target="_blank"><img src="img/github.png"
-              style="height: 1.3rem" class="burgundy-filter" alt="github.com/lujainibrahim"></a> &ensp;lujainibrahim</p>
+              style="height: 1.3rem" class="burgundy-filter" alt="github.com/lujainibrahim"></a> &ensp;lujainibrahim</p> -->
         </div>
       </div>
       <div>
