--- a/index.html
+++ b/index.html
@@ -1,73 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="Lujain Ibrahim">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="manifest" href="site.webmanifest">
-
-  <title>Lujain Ibrahim</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/the-big-picture.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Lujain Ibrahim">
+  
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+  
+    <title>Lujain Ibrahim</title>
+  
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  
+    <!-- Custom styles for this template -->
+    <link href="css/the-big-picture.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+    <!-- Custom CSS for Vertical Navigation -->
+    <style>
+      .vertical-nav {
+        position: fixed;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        width: 200px;
+        background-color: #f8f9fa;
+        padding: 50px 0;
+        transition: all 0.3s;
+      }
+  
+      .vertical-nav .nav-link {
+        color: #495057;
+        transition: all 0.3s;
+      }
+  
+      .vertical-nav .nav-link:hover {
+        color: #007bff;
+      }
+    </style>
+  
+  </head>
 
 <body>
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <!-- <a class="navbar-brand" href="#">Lujain</a> -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="research.html">Research</a>
-          </li>
-          <li class="nav-item">
-            <!-- <a class="nav-link" href="#">Other Work</a> -->
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">Media</a>
-          </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">Media/Consulting</a>
-          </li> -->
-        </ul>
-      </div>
-    </div>
-  </nav>
-
+  <!-- Navigation -->
+  <div class="vertical-nav">
+    <ul class="nav flex-column">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html"><b>Lujain Ibrahim</b></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">about</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="research.html">research</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="fun.html">fun</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="engagements.html">engagements</a>
+      </li>
+    </ul>
+  </div>
   <!-- Page Content -->
   <section>
-    <div class="container">
-      <div class="row">
+    <div class="container" style="margin-left: 220px;">     
+       <div class="row">
         <div class="col-lg-9">
-          <h1 class="mt-5">Lujain Ibrahim</h1>
+          <h1 class="mt-5"></h1>
           <!-- <p>coming soon... i hope...</p> -->
-          <p>Hi! I'm Lujain, a PhD student in Social Data Science at the <a href="https://www.oii.ox.ac.uk/people/profiles/lujain-ibrahim/" target="_blank">Oxford Internet Institute</a> where I study and research the impact of emerging technologies on society and international politics, with a focus on U.S.-China relations. My doctoral research is mainly concerned with AI governance issues, particularly studying and governing complex human-algorithm feedback loops. Beyond research, I'm invested in making technology and society issues more accessible to the public by building <a href="https://www.multiplicity.tech/" target="_blank">interactive</a> educational websites.</p>
+          <p>Hi! I'm Lujain, a PhD student in Social Data Science at the <a href="https://www.oii.ox.ac.uk/people/profiles/lujain-ibrahim/" target="_blank">Oxford Internet Institute</a> where I study and research the impact of emerging technologies on society and international politics, with a focus on U.S.-China relations. My doctoral research is mainly concerned with AI governance issues, particularly studying and governing human-algorithm feedback. Beyond research, I'm invested in making technology and society issues more accessible to the public by building <a href="https://www.multiplicity.tech/" target="_blank">interactive</a> educational websites.</p>
 
-          <p>I have studied and worked in the Middle East, the US, the UK, and China, was formerly a fellow at <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a> — a Harvard Berkman-Klein incubated think tank, a <a href="https://www.schwarzmanscholars.org/" target="_blank">Schwarzman Scholar</a> at Tsinghua University, and a researcher at the <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/laboratory-for-computer-human-intelligence.html" target="_blank">Laboratory for Computer-Human Intelligence</a> at NYU Abu Dhabi.</p>
+          <p>My background is in computer engineering and global affairs. I have studied and worked in the Middle East, the US, the UK, and China, was formerly a fellow at <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a> — a Harvard Berkman-Klein incubated think tank, a <a href="https://www.schwarzmanscholars.org/" target="_blank">Schwarzman Scholar</a> at Tsinghua University, and a researcher at the <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/laboratory-for-computer-human-intelligence.html" target="_blank">Laboratory for Computer-Human Intelligence</a> at NYU Abu Dhabi.</p>
 
           <!-- <p><b>What's currently keeping busy?</b> My PhD, building <a href="https://foundation.mozilla.org/en/blog/announcing-11-projects-exploring-ai-and-responsible-design/" target="_blank">"The Algorithm"</a> for the Mozilla Foundation, and teaching a course on the Geopolitics of AI Governance.</p> -->
-          <p>You can learn more about me, my research, and other work here or get in touch:</p>
+          <p>You can learn more <a href="about.html" target="_blank">about me</a>, <a href="research.html" target="_blank">my research</a>, and <a href="fun.html" target="_blank">other work</a> here or get in touch:</p>
           <a class="alt-link" href="mailto:lujainmibrahim@gmail.com" target="_blank"><img src="img/mail.png"
               style="height: 1.3rem;" class="burgundy-filter" alt="lujainmibrahim@gmail.com"></a>&ensp;
           lujainmibrahim@gmail.com<br>
