--- a/index.html
+++ b/index.html
@@ -1,81 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Lujain Ibrahim">
-  
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-  
-    <title>Lujain Ibrahim</title>
-  
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  
-    <!-- Custom styles for this template -->
-    <link href="css/the-big-picture.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
-    <!-- Custom CSS for Vertical Navigation -->
-    <style>
-      .vertical-nav {
-        position: fixed;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        width: 200px;
-        background-color: #f8f9fa;
-        padding: 50px 0;
-        transition: all 0.3s;
-      }
-  
-      .vertical-nav .nav-link {
-        color: #495057;
-        transition: all 0.3s;
-      }
-  
-      .vertical-nav .nav-link:hover {
-        color: #007bff;
-      }
-    </style>
-  
-  </head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="Lujain Ibrahim">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+
+  <title>Lujain Ibrahim</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/the-big-picture.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
 <body>
   <!-- Navigation -->
-  <!-- Navigation -->
-  <div class="vertical-nav">
-    <ul class="nav flex-column">
-      <li class="nav-item">
-        <a class="nav-link" href="index.html"><b>Lujain Ibrahim</b></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">about</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="research.html">research</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="fun.html">fun</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="engagements.html">engagements</a>
-      </li>
-    </ul>
-  </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <!-- <a class="navbar-brand" href="#">Lujain</a> -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="research.html">Research</a>
+          </li>
+          <li class="nav-item">
+            <!-- <a class="nav-link" href="#">Other Work</a> -->
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="#">Media</a>
+          </li> -->
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="#">Media/Consulting</a>
+          </li> -->
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <!-- Page Content -->
   <section>
-    <div class="container" style="margin-left: 220px;">     
-       <div class="row">
+    <div class="container">
+      <div class="row">
         <div class="col-lg-9">
-          <h1 class="mt-5"></h1>
+          <h1 class="mt-5">Lujain Ibrahim</h1>
           <!-- <p>coming soon... i hope...</p> -->
           <p>Hi! I'm Lujain, a PhD student in Social Data Science at the <a href="https://www.oii.ox.ac.uk/people/profiles/lujain-ibrahim/" target="_blank">Oxford Internet Institute</a> where I study and research the impact of emerging technologies on society and international politics. My doctoral research is mainly concerned with AI governance issues, particularly studying and governing human-algorithm feedback. Beyond research, I'm invested in making technology and society issues more accessible to the public by building <a href="https://www.multiplicity.tech/" target="_blank">interactive</a> educational websites.</p>
 
@@ -90,9 +75,7 @@
               style="height: 1.1rem;" class="burgundy-filter" alt="twitter.com/lujainmibrahim"></a>&ensp;
           lujainmibrahim <br>
           <a class="alt-link" href="https://www.github.com/lujainibrahim" target="_blank"><img src="img/github.png"
-              style="height: 1.3rem" class="burgundy-filter" alt="github.com/lujainibrahim"></a> &ensp;lujainibrahim</p>
-        </div>
-      </div>
+              style="height: 1.3rem" class="burgundy-filter" alt="github.com/lujainibrahim"></a> &ensp;lujainibrahim</p>      </div>
       <div>
 
       </div>
