--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 <body>
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
+  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container"> -->
       <!-- <a class="navbar-brand" href="#">Lujain</a> -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,7 +41,7 @@
           <li class="nav-item">
             <a class="nav-link" href="research.html">Research</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item"> -->
             <!-- <a class="nav-link" href="#">Other Work</a> -->
           </li>
           <!-- <li class="nav-item">
@@ -50,10 +50,10 @@
           <!-- <li class="nav-item">
             <a class="nav-link" href="#">Media/Consulting</a>
           </li> -->
-        </ul>
+        <!-- </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
   <!-- Page Content -->
   <section>
@@ -62,12 +62,15 @@
         <div class="col-lg-9">
           <h1 class="mt-5">Lujain Ibrahim</h1>
           <!-- <p>coming soon... i hope...</p> -->
-          <p>Hi! I'm Lujain, a PhD student in Social Data Science at the <a href="https://www.oii.ox.ac.uk/people/profiles/lujain-ibrahim/" target="_blank">Oxford Internet Institute</a> where I study and research the impact of emerging technologies on society and international politics. My doctoral research is mainly concerned with AI governance issues, particularly studying and governing human-algorithm feedback. Beyond research, I'm invested in making technology and society issues more accessible to the public by building <a href="https://www.multiplicity.tech/" target="_blank">interactive</a> educational websites.</p>
+          <p>Hi! I'm a PhD student in Social Data Science at the <a href="https://www.oii.ox.ac.uk/people/profiles/lujain-ibrahim/" target="_blank">Oxford Internet Institute</a> where I study and research the impact of emerging technologies on society and international politics. My doctoral research is mainly concerned with AI governance issues, particularly algorithmic control and governance approaches that increase user control in human-AI interactions (see list of publications <a href="https://scholar.google.com/citations?user=WrTT9X4AAAAJ&hl=en" target="_blank">here</a>).</p>
 
-          <p>My background is in computer engineering and global affairs. I have studied and worked in the Middle East, the US, the UK, and China, was formerly a fellow at <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a> — a Harvard Berkman-Klein incubated think tank, a <a href="https://www.schwarzmanscholars.org/" target="_blank">Schwarzman Scholar</a> at Tsinghua University, and a researcher at the <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/laboratory-for-computer-human-intelligence.html" target="_blank">Laboratory for Computer-Human Intelligence</a> at NYU Abu Dhabi.</p>
+          <p>My background is in computer engineering and international relations. I completed my Master's degree in Global Affairs from Tsinghua University in Beijing as a <a href="https://nyuad.nyu.edu/en/news/latest-news/honors-and-awards/2020/december/schwarzman-2022-eng.html" target="_blank">Schwarzman Scholar</a>. My thesis investigated the political implications of the informatization and digitization of the Chinese judiciary and the legal technology innovation system behind it. My undergraduate degree is in computer engineering from New York University (NYU) Abu Dhabi. My thesis was on <a href="https://ieeexplore.ieee.org/abstract/document/9268965" target="_blank">explainable ML for heart attack prediction</a>.</p>
 
-          <!-- <p><b>What's currently keeping busy?</b> My PhD, building <a href="https://foundation.mozilla.org/en/blog/announcing-11-projects-exploring-ai-and-responsible-design/" target="_blank">"The Algorithm"</a> for the Mozilla Foundation, and teaching a course on the Geopolitics of AI Governance.</p> -->
-          <p>You can learn more <a href="about.html" target="_blank">about me</a>, <a href="research.html" target="_blank">my research</a>, and <a href="fun.html" target="_blank">other work</a> here or get in touch:</p>
+          <p>Over the years, I've been a fellow at <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a> — a Harvard Berkman-Klein incubated think tank — and <a href="https://montrealethics.ai/">The Montreal AI Ethics Institute</a>, a Creative Media Awardee at <a href="https://foundation.mozilla.org/en/">The Mozilla Foundation</a>, and a researcher at the <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/laboratory-for-computer-human-intelligence.html" target="_blank">Laboratory for Computer-Human Intelligence</a> at NYU Abu Dhabi. My extended list of engagements can be found <a href="https://www.linkedin.com/in/lujain-ibrahim/" target="_blank">here</a></p> 
+          
+          <p> Beyond research, I'm invested in making technology and society issues more accessible to the public; with <a href="https://aliaelkattan.github.io/" target="_blank"></a>Alia El Kattan, I co-built <a href="https://www.multiplicity.tech/" target="_blank">Multiplicity</a>, a curation of articles about the internet's impact on young people around the world. As grantees of a <a href="https://foundation.mozilla.org/en/blog/announcing-11-projects-exploring-ai-and-responsible-design/" target="_blank">Mozilla Creative Media Award</a>, we're now building "The Algorithm", a simulation that demystifies recommendation algorithms. Our public-facing work was most recently highlighted by The Webby Awards and Omidyar Network in their latest <a href="https://www.webbyawards.com/news/webby-omidyar-responsible-tech-trend-report/" target="_blank">Responsible Tech Industry Report</a>.</p>
+
+          <p>Reach out to talk/learn more :)</p>
           <a class="alt-link" href="mailto:lujainmibrahim@gmail.com" target="_blank"><img src="img/mail.png"
               style="height: 1.3rem;" class="burgundy-filter" alt="lujainmibrahim@gmail.com"></a>&ensp;
           lujainmibrahim@gmail.com<br>
