--- a/index.html
+++ b/index.html
@@ -69,13 +69,9 @@
 
             <p>My background is in computer engineering and international relations. I completed my Master's degree in international relations at Tsinghua University in Beijing as a <a href="https://nyuad.nyu.edu/en/news/latest-news/honors-and-awards/2020/december/schwarzman-2022-eng.html" target="_blank">Schwarzman Scholar</a>. My undergraduate degree is in computer engineering from <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/laboratory-for-computer-human-intelligence.html" target="_blank">New York University (NYU), Abu Dhabi</a>. Over the years, I've been a fellow at <a href="https://www.governance.ai/" target="_blank">Centre for Governance of AI</a>, <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a>, and <a href="https://montrealethics.ai/">The Montreal AI Ethics Institute</a>.  My extended list of engagements can be found <a href="https://www.linkedin.com/in/lujain-ibrahim/" target="_blank">here</a>.
   
-              <p> Outside of research, I do creative coding work that demystifies emerging technologies, like the ones I build and study, to the public at large. With the support of <a href="https://foundation.mozilla.org/en/blog/announcing-11-projects-exploring-ai-and-responsible-design/" target="_blank">The Mozilla Foundation</a>, I am currently co-building a "The Algorithm", a web game that breaks down how recommendation algorithms work (and don't work) to a non-expert audience. My public-facing work was recently highlighted by The Webby Awards and Omidyar Network in their latest <a href="https://www.webbyawards.com/news/webby-omidyar-responsible-tech-trend-report/" target="_blank">Responsible Tech Industry Report</a>.</p>
+              <p> Outside of research, I do creative coding work that demystifies emerging technologies, like the ones I build and study, to the public at large. With the support of <a href="https://foundation.mozilla.org/en/blog/announcing-11-projects-exploring-ai-and-responsible-design/" target="_blank">The Mozilla Foundation</a>, I am currently co-building "The Algorithm", a web game that breaks down how recommendation algorithms work (and don't work) to a non-expert audience. My public-facing work was recently highlighted by The Webby Awards and Omidyar Network in their latest <a href="https://www.webbyawards.com/news/webby-omidyar-responsible-tech-trend-report/" target="_blank">Responsible Tech Industry Report</a>.</p>
 
           </section>
-<!--             
-            , a Creative Media Awardee at <a href="https://foundation.mozilla.org/en/">The Mozilla Foundation</a>, 
-            
-            and a researcher at the <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/laboratory-for-computer-human-intelligence.html" target="_blank">Laboratory for Computer-Human Intelligence</a> at NYU Abu Dhabi. -->
           </p> 
           <!-- <hr style="border: none; border-top: 1px dashed #999; width: 30%; margin: 0 auto;"> -->
           <section id="research">
@@ -86,9 +82,10 @@
           <!-- <hr style="border: none; border-top: 1px dashed #999; width: 30%; margin: 0 auto;"> -->
           <section id="news">
             <p style="font-weight: 800;">news</p>
-            <p>* [Jan 2024] Joined <a href="governance.ai" target="_blank">Centre for Governance of AI</a> as a winter research fellow</p>
+            <p>* [Feb 2024] Launched <a href="https://whatsthealgorithm.com" target="_blank">"The Algorithm"</a> - a web-based game explainer of recommendation systems</p>
+            <p>* [Jan 2024] Joined <a href="https://governance.ai" target="_blank">Centre for Governance of AI</a> as a winter research fellow to work on contextually-relevant model safety evaluations</p>
             <p>* [Nov 2023] Awarded <a href="https://www.oii.ox.ac.uk/news-events/dieter-schwarz-foundation-research-programme-project-awards-announced/" target="_blank">Dieter Schwarz Foundation-OII grant</a> for research on AI, Governments and Politics</p>
-
+            <p>* [Nov 2023] Presented work-in-progress game at <a href="https://professionals.idfa.nl/forum/4b515d44-f972-4dad-8fa2-88b2cd53e563/the-algorithm/" target="_blank">IDFA DocLab</a> in Amsterdam</p>
           </section>
   <section id="contact"> 
           <p style="font-weight: 800;">contact</p>
