--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <section id="news">
             <p style="font-weight: 800;">news</p>
             <p>* [May 2024] Started internship with Google DeepMind's Ethics Research Team, working on model safety evaluation</p>
-            <p>* [May 2024] New <a href="" target="_blank">preprint</a> on human interaction evaluations for LLM safety, risks, and harms</p>
+            <p>* [May 2024] New <a href="https://arxiv.org/abs/2405.10632" target="_blank">preprint</a> on human interaction evaluations for LLM safety, risks, and harms</p>
             <p>* [Apr 2024] New <a href="https://arxiv.org/pdf/2404.11370" target="_blank">preprint</a> on harms from AI user interface designs, presented in <a href="https://heal-workshop.github.io/" target="blank">CHI 2024 Workshop on Human-centered Evaluation and Auditing of Language Models</a></p>
             <p>* [Feb 2024] Launched <a href="https://whatsthealgorithm.com" target="_blank">"The Algorithm"</a> - a web-based game explainer of recommendation systems</p>
             <div id="more-content">
