--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
         #toggle-link:hover {
             color: #3772FF; 
         }
+        ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    margin: 0;
+}
+
+li {
+    font-family: 'Raleway', sans-serif;
+    font-size: inherit;
+    color: black;
+    margin-bottom: 10px;
+}
   </style>
   <link href="css/the-big-picture.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet">
@@ -43,11 +55,16 @@
           color: black;">Lujain Ibrahim</p>
           <p><a href="#about">about</a> // <a href="#research">research</a> // <a href="#news"> news</a> // <a href="#contact">contact</a> </p>
           <section id="about">
-            <p>Hi! I'm currently completing a PhD in Social Data Science at the University of Oxford. My research focuses on sociotechnical approaches to evaluating and governing AI systems, their impact, and risks to society. My doctoral thesis specifically investigates how human-AI interaction complicates safety evaluation of general-purpose AI systems (see <a href="#research">research</a>).</p>
+            <p>I’m a PhD candidate in social data science at the University of Oxford. My research focuses on sociotechnical approaches to evaluating and governing AI systems, their societal impact, and social and relational harms. I also research sociotechnical evaluations as a student researcher on the Ethics Research Team at Google DeepMind, and co-lead an <a href="https://decifer.tech/" target="_blank">AI literacy design studio</a>.</p>
 
-            <p>My background is in computer engineering and international relations. I completed my Master's degree in international relations at Tsinghua University in Beijing as a <a href="https://nyuad.nyu.edu/en/news/latest-news/honors-and-awards/2020/december/schwarzman-2022-eng.html" target="_blank">Schwarzman Scholar</a>. My undergraduate degree is in computer engineering from <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/laboratory-for-computer-human-intelligence.html" target="_blank">New York University (NYU), Abu Dhabi</a>. Over the years, I've been a fellow at <a href="https://www.governance.ai/" target="_blank">Centre for Governance of AI</a>, <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a>, and <a href="https://montrealethics.ai/">The Montreal AI Ethics Institute</a>.  My extended list of engagements can be found <a href="https://www.linkedin.com/in/lujain-ibrahim/" target="_blank">here</a>.
+            <p>My background is in computer engineering and international relations. I am former <a href="https://www.schwarzmanscholars.org/" target="_blank">Schwarzman Scholar</a>, and former fellow at the <a href="https://www.governance.ai/" target="_blank">Centre for Governance of AI</a>, the <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a>, and <a href="https://montrealethics.ai/">The Montreal AI Ethics Institute</a>.
   
-              <p> Outside of research, I do creative coding work that demystifies emerging technologies, like the ones I build and study, to the public at large. With the support of <a href="https://foundation.mozilla.org/en/blog/announcing-11-projects-exploring-ai-and-responsible-design/" target="_blank">The Mozilla Foundation</a>, I recently co-built "The Algorithm", a web game that breaks down how recommendation algorithms work (and don't work) to a non-expert audience. My public-facing work was recently highlighted by The Webby Awards and Omidyar Network in their latest <a href="https://www.webbyawards.com/news/webby-omidyar-responsible-tech-trend-report/" target="_blank">Responsible Tech Industry Report</a>.</p>
+            <p>I’m currently thinking about and working on the following (pls reach out if you are too and want to chat!):</p>
+            <ul>
+              <li>rethinking safety evaluation methods: what happens when our safety tests meet real human-AI interactions?</li>
+              <li>anthropomorphism and language models</li>
+              <li>international cooperation on AI governance</li>
+          </ul>
 
           </section>
           </p> 
@@ -58,11 +75,14 @@
           </section>
           <section id="news">
             <p style="font-weight: 800;">news</p>
-            <p>* [May 2024] Started internship with Google DeepMind's Ethics Research Team, working on model safety evaluation</p>
-            <p>* [May 2024] New <a href="https://arxiv.org/abs/2405.10632" target="_blank">preprint</a> on human interaction evaluations for LLM safety, risks, and harms</p>
-            <p>* [Apr 2024] New <a href="https://arxiv.org/pdf/2404.11370" target="_blank">preprint</a> on harms from AI user interface designs, presented in <a href="https://heal-workshop.github.io/" target="blank">CHI 2024 Workshop on Human-centered Evaluation and Auditing of Language Models</a></p>
-            <p>* [Feb 2024] Launched <a href="https://whatsthealgorithm.com" target="_blank">"The Algorithm"</a> - a web-based game explainer of recommendation systems</p>
+            <p>* [Sep 2024] Presented at Imperial College London's symposium on <a href="https://haiosymposium.com/" target="_blank">Human and Artificial Intelligence in Organizations</a></p>
+            <p>* [Jul 2024] New <a href="https://taig.stanford.edu/" target="_blank">preprint</a> on Open Technical Problems in AI Governance</p>
+            <p>* [Jun 2024] Presented "The Algorithm" at <a href="https://www.sheffdocfest.com/" target="_blank">Sheffield DocFest</a></p>
             <div id="more-content">
+              <p>* [May 2024] Started internship with Google DeepMind's Ethics Research Team, working on model safety evaluation</p>
+              <p>* [May 2024] New <a href="https://arxiv.org/abs/2405.10632" target="_blank">preprint</a> on human interaction evaluations for LLM safety, risks, and harms</p>
+              <p>* [Apr 2024] New <a href="https://arxiv.org/pdf/2404.11370" target="_blank">preprint</a> on harms from AI user interface designs, presented in <a href="https://heal-workshop.github.io/" target="blank">CHI 2024 Workshop on Human-centered Evaluation and Auditing of Language Models</a></p>
+              <p>* [Feb 2024] Launched <a href="https://whatsthealgorithm.com" target="_blank">"The Algorithm"</a> - a web-based game explainer of recommendation systems</p>
               <p>* [Jan 2024] Joined <a href="https://governance.ai" target="_blank">Centre for Governance of AI</a> as a winter research fellow to work on contextually-relevant model safety evaluations</p>
               <p>* [Dec 2024] New <a href="https://osf.io/preprints/osf/ey8db" target="_blank">preprint</a> on the persuasiveness of role-playing large language models</p>
               <p>* [Nov 2023] Awarded <a href="https://www.oii.ox.ac.uk/news-events/dieter-schwarz-foundation-research-programme-project-awards-announced/" target="_blank">Dieter Schwarz Foundation-OII grant</a> for research on AI, Government and Policy</p>
@@ -72,7 +92,7 @@
           </section>
   <section id="contact"> 
           <p style="font-weight: 800;">contact</p>
-          <p>If we have similar research interests and think we can work together, please reach out!</p>
+          <!-- <p>If we have similar research interests and think we can work together, please reach out!</p> -->
           <a class="alt-link" href="mailto:lujainmibrahim@gmail.com" target="_blank"><img src="img/mail.png"
               style="height: 1.3rem;" class="burgundy-filter" alt="lujainmibrahim@gmail.com"></a>&ensp;
           lujainmibrahim@gmail.com<br>
