--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@ li {
           color: black;">Lujain Ibrahim</p>
           <p><a href="#about">about</a> // <a href="#research">research</a> // <a href="#news"> news</a> // <a href="#contact">contact</a> </p>
           <section id="about">
-            <p>I’m a PhD candidate in social data science at the University of Oxford. My research focuses on sociotechnical approaches to evaluating and governing AI systems, their societal impact, and social and relational harms. I also research sociotechnical evaluations as a student researcher on the Ethics Research Team at Google DeepMind, and co-lead an <a href="https://decifer.tech/" target="_blank">AI literacy design studio</a>.</p>
+            <p>I’m a PhD candidate in social data science at the University of Oxford. My research focuses on sociotechnical approaches to evaluating and governing AI systems, their societal impact, and their relational harms. I am also building up a <a href="https://decifer.tech/" target="_blank">design studio</a> working on public AI literacy.</p>
 
-            <p>My background is in computer engineering and international relations. I am former <a href="https://www.schwarzmanscholars.org/" target="_blank">Schwarzman Scholar</a>, and former fellow at the <a href="https://www.governance.ai/" target="_blank">Centre for Governance of AI</a>, the <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a>, and <a href="https://montrealethics.ai/">The Montreal AI Ethics Institute</a>.
+            <p>My background is in computer engineering and international relations. Formerly, I was a student researcher at Google DeepMind working on <a href="https://deepmind.google/discover/blog/evaluating-social-and-ethical-risks-from-generative-ai/" target="_blank">sociotechnical model evaluations</a>, a <a href="https://www.schwarzmanscholars.org/" target="_blank">Schwarzman Scholar</a>, and a fellow at the <a href="https://www.governance.ai/" target="_blank">Centre for Governance of AI</a>, the <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a>, and <a href="https://montrealethics.ai/">The Montreal AI Ethics Institute</a>.
   
             <p>I’m currently thinking about and working on the following (pls reach out if you are too and want to chat!):</p>
             <ul>
-              <li>rethinking safety evaluation methods: what happens when our safety tests meet real human-AI interactions?</li>
-              <li>anthropomorphism and language models</li>
+              <li>model evaluation methods</li>
+              <li>interaction harms, especially from anthropomorphic AI systems</li>
               <li>international cooperation on AI governance</li>
           </ul>
 
@@ -70,15 +70,20 @@ li {
           </p> 
           <section id="research">
             <p style="font-weight: 800;">research</p>
-            <p>My research approach is grounded in information theory and human-centered computing, but also draws on cognitive science and design studies. I directly work with both models and people, aiming to evaluate and enhance their interactions by developing and testing frameworks, as well as conducting experiments and user studies. My publications can be found <a href="https://scholar.google.com/citations?user=WrTT9X4AAAAJ&hl=en" target="_blank">here</a>.</p>
+            <p>My research approach is grounded in information theory and human-centered computing, but also draws on cognitive science and design studies. I work directly with both models and people, aiming to evaluate and enhance their interactions by developing and testing frameworks, as well as conducting experiments and user studies. My publications can be found <a href="https://scholar.google.com/citations?user=WrTT9X4AAAAJ&hl=en" target="_blank">here</a>.</p>
 
           </section>
           <section id="news">
             <p style="font-weight: 800;">news</p>
-            <p>* [Sep 2024] Presented at Imperial College London's symposium on <a href="https://haiosymposium.com/" target="_blank">Human and Artificial Intelligence in Organizations</a></p>
-            <p>* [Jul 2024] New <a href="https://taig.stanford.edu/" target="_blank">preprint</a> on Open Technical Problems in AI Governance</p>
-            <p>* [Jun 2024] Presented "The Algorithm" at <a href="https://www.sheffdocfest.com/" target="_blank">Sheffield DocFest</a></p>
+            <p>* [Feb 2025] New <a href="https://arxiv.org/abs/2502.07077" target="_blank">preprint</a> on evaluating anthropomorphic language in LLMs</p>
+            <p>* [Feb 2025] Received a grant from the <a href="https://www.rtyouthpower.org/" target="_blank">Responsible Youth Tech Power fund</a> for research on young people & AI</p>
+            <p>* [Jan 2025] Started a visiting academic position at NYU Center for Data Science</p>
+            <p>* [Jan 2025] New <a href="https://www.oxfordmartin.ox.ac.uk/publications/promising-topics-for-us-china-dialogues-on-ai-safety-and-governance" target="_blank">policy report</a> on promising topics for dialogue between the US and China on AI ethics, safety, and governance</p>
             <div id="more-content">
+              <p>* [Dec 2024] Short paper on <a href="https://evaleval.github.io/accepted-papers.html" target="_blank">human-LLM interaction modes</a> accepted as an oral in the Evaluating Evaluations (EvalEval) workshop at NeurIPS 2024</p>
+              <p>* [Sep 2024] Presented at Imperial College London's symposium on <a href="https://haiosymposium.com/" target="_blank">Human and Artificial Intelligence in Organizations</a></p>
+              <p>* [Jul 2024] New <a href="https://taig.stanford.edu/" target="_blank">preprint</a> on Open Technical Problems in AI Governance</p>
+              <p>* [Jun 2024] Presented "The Algorithm" at <a href="https://www.sheffdocfest.com/" target="_blank">Sheffield DocFest</a></p>
               <p>* [May 2024] Started internship with Google DeepMind's Ethics Research Team, working on model safety evaluation</p>
               <p>* [May 2024] New <a href="https://arxiv.org/abs/2405.10632" target="_blank">preprint</a> on human interaction evaluations for LLM safety, risks, and harms</p>
               <p>* [Apr 2024] New <a href="https://arxiv.org/pdf/2404.11370" target="_blank">preprint</a> on harms from AI user interface designs, presented in <a href="https://heal-workshop.github.io/" target="blank">CHI 2024 Workshop on Human-centered Evaluation and Auditing of Language Models</a></p>
