--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@ li {
           color: black;">Lujain Ibrahim</p>
           <p><a href="#about">about</a> // <a href="#research">research</a> // <a href="#news"> news</a> // <a href="#contact">contact</a> </p>
           <section id="about">
-            <p>I’m a PhD candidate in social data science at the University of Oxford. My research focuses on sociotechnical approaches to evaluating and governing AI systems, their societal impact, and their relational harms. I am also building up a <a href="https://decifer.tech/" target="_blank">design studio</a> working on public AI literacy.</p>
+            <p>I’m a PhD candidate in social data science at the University of Oxford. My research focuses on sociotechnical approaches to evaluating and aligning language models. I am also building a <a href="https://decifer.tech/" target="_blank">design studio</a> focused on public AI literacy.</p>
 
-            <p>My background is in computer engineering and international relations. Formerly, I was a student researcher at Google DeepMind working on <a href="https://deepmind.google/discover/blog/evaluating-social-and-ethical-risks-from-generative-ai/" target="_blank">sociotechnical model evaluations</a>, a <a href="https://www.schwarzmanscholars.org/" target="_blank">Schwarzman Scholar</a>, and a fellow at the <a href="https://www.governance.ai/" target="_blank">Centre for Governance of AI</a>, the <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a>, and <a href="https://montrealethics.ai/">The Montreal AI Ethics Institute</a>.
+            <p>My background is in computer engineering and international relations. Formerly, I was a student researcher at Google DeepMind working on <a href="https://deepmind.google/discover/blog/evaluating-social-and-ethical-risks-from-generative-ai/" target="_blank">model evaluations</a>, a <a href="https://www.schwarzmanscholars.org/" target="_blank">Schwarzman Scholar</a>, and a fellow at the <a href="https://www.governance.ai/" target="_blank">Centre for Governance of AI</a>, and the <a href="https://www.digitalasiahub.org/" target="_blank">Digital Asia Hub</a>.
   
             <p>I’m currently thinking about and working on the following (pls reach out if you are too and want to chat!):</p>
             <ul>
+              <li>socioaffective LLM behaviors</li>
+              <li>LLM sycophancy</li>
               <li>model evaluation methods</li>
-              <li>interaction harms, especially from anthropomorphic AI systems</li>
-              <li>international cooperation on AI governance</li>
           </ul>
 
           </section>
